[gd_scene load_steps=3 format=3 uid="uid://buthx4mag0w5"]

[ext_resource type="Script" path="res://Scripts/results_screen.gd" id="1_0kxqi"]
[ext_resource type="FontFile" uid="uid://ktnlyqclx0vo" path="res://Assets/Fonts/VCR_OSD_MONO_1.001.ttf" id="1_h6jqq"]

[node name="ResultsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0kxqi")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 191.0
offset_right = 1923.0
offset_bottom = 366.0
theme_override_fonts/font = ExtResource("1_h6jqq")
theme_override_font_sizes/font_size = 128
text = "RESULTS HERE"
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="."]
layout_mode = 0
offset_left = 717.0
offset_top = 405.0
offset_right = 1201.0
offset_bottom = 529.0
theme_override_fonts/font = ExtResource("1_h6jqq")
theme_override_font_sizes/font_size = 64
text = "Play Again"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 721.0
offset_top = 581.0
offset_right = 1199.0
offset_bottom = 703.0
theme_override_fonts/font = ExtResource("1_h6jqq")
theme_override_font_sizes/font_size = 64
text = "Quit"

[connection signal="pressed" from="PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
